refactor: update ApiClient to use virtual thread executor and improve response validation