@@ -1,6 +1,5 @@
 package api_client;
 
-import tools.jackson.core.type.TypeReference;
 import tools.jackson.databind.ObjectMapper;
 import utils.Log;
 import utils.dto.GameDTO;
@@ -10,7 +9,6 @@ import java.net.URI;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
-import java.sql.SQLOutput;
 import java.time.Duration;
 import java.util.List;
 import java.util.concurrent.*;
@@ -19,14 +17,14 @@ public class ApiClient implements IApiClient {
     private static final String BASE_URL = "http://localhost:8080";
     private final HttpClient http;
     private final ObjectMapper mapper;
-    private final ExecutorService executorService;
+    private final ExecutorService executors;
 
     public ApiClient() {
         this.mapper = new ObjectMapper();
 
-        this.executorService = Executors.newFixedThreadPool(2);
+        this.executors = Executors.newVirtualThreadPerTaskExecutor();
         this.http = HttpClient.newBuilder()
-            .executor(executorService)
+            .executor(executors)
             .connectTimeout(Duration.ofSeconds(5))
             .build();
     }
@@ -35,14 +33,10 @@ public class ApiClient implements IApiClient {
         HttpRequest request = buildGetRequest();
         return http.sendAsync(request, HttpResponse.BodyHandlers.ofString())
             .thenApply(res -> {
-                int statusCode = res.statusCode();
-                if (statusCode < 200 || statusCode >= 300) {
-                    Log.error("GET request failed with status code: " + statusCode);
-                    throw new RuntimeException("GET failed with status code: " + statusCode);
-                }
+                validateStatusCode(res.statusCode());
+                validateResponse(res.body());
 
                 try {
-                    System.out.println("GET response body: " + res.body());
                     return deserializeFromJson(res.body());
                 } catch (Exception e) {
                     Log.error("Failed to parse GET response: " + e.getMessage());
@@ -63,14 +57,7 @@ public class ApiClient implements IApiClient {
         HttpRequest request = buildPostRequest(json);
 
         return http.sendAsync(request, HttpResponse.BodyHandlers.ofString())
-            .thenApply(res -> {
-                int statusCode = res.statusCode();
-                if (statusCode < 200 || statusCode >= 300) {
-                    Log.error("POST request failed with status code: " + statusCode);
-                    throw new RuntimeException("POST failed with status code: " + statusCode);
-                }
-                return null;
-            });
+            .thenAccept(res -> validateStatusCode(res.statusCode()));
     }
 
     private HttpRequest buildGetRequest() {
@@ -111,9 +98,23 @@ public class ApiClient implements IApiClient {
             throw new RuntimeException("Failed to parse JSON response", e);
         }
     }
+    
+    private void validateStatusCode(int code) {
+        if (code < 200 || code >= 300) {
+            Log.error("Request failed with status code: " + code);
+            throw new RuntimeException("Request failed with status code: " + code);
+        }
+    }
+    
+    private void validateResponse(String body) {
+        if (body == null || body.isEmpty()) {
+            Log.error("Response body is empty");
+            throw new RuntimeException("Response body is empty");
+        }
+    }
 
     public void shutdownExecutors() {
-        executorService.shutdown();
+        executors.shutdown();
     }
 
     private String getHiscoreUrl() {
@@ -124,7 +125,7 @@ public class ApiClient implements IApiClient {
     public CompletableFuture<List<GameDTO>> loadHiscores() {
         return sendGetRequest()
             .thenApply(list -> {
-                Log.log("Loaded hiscores: " + list.size() + " entries");
+                Log.log("Hiscores loaded successfully");
                 return list;
             })
             .exceptionally(ex -> {
